reference/tests/snapshots/snapshot__run_reference_examples@dates_and_times-1.prql.snap
---
source: reference/tests/snapshot.rs
expression: sql
input_file: reference/tests/examples/language-features/dates_and_times-1.prql
---
SELECT
  orders.*,
  order_time < TIME '08:30' AS should_have_shipped_today
FROM
  orders
