reference/tests/snapshots/snapshot__run_reference_examples@dates_and_times-3.prql.snap
---
source: reference/tests/snapshot.rs
expression: sql
input_file: reference/tests/examples/language-features/dates_and_times-3.prql
---
SELECT
  projects.*,
  start + INTERVAL '10' DAY AS first_check_in
FROM
  projects
