reference/tests/snapshots/snapshot__run_reference_examples@pipelines-2.prql.snap
---
source: reference/tests/snapshot.rs
expression: sql
input_file: reference/tests/examples/queries/pipelines-2.prql
---
SELECT
  employees.*,
  salary + payroll_tax AS gross_salary
FROM
  employees
ORDER BY
  gross_salary
