reference/tests/snapshots/snapshot__run_reference_prql@distinct-2.prql.snap
---
source: reference/tests/snapshot.rs
expression: sql
input_file: reference/tests/prql/language-features/distinct-2.prql
---
WITH table_0 AS (
  SELECT
    employees.*,
    ROW_NUMBER() OVER (
      PARTITION BY department
      ORDER BY
        age ROWS BETWEEN UNBOUNDED PRECEDING
        AND UNBOUNDED FOLLOWING
    ) AS rank
  FROM
    employees
)
SELECT
  table_0.*
FROM
  table_0
WHERE
  rank = 1
