reference/tests/snapshots/snapshot__run_reference_prql@s-strings-2.prql.snap
---
source: reference/tests/snapshot.rs
expression: sql
input_file: reference/tests/prql/language-features/s-strings-2.prql
---
SELECT
  de.*,
  s.*
FROM
  dept_emp AS de
  LEFT JOIN salaries AS s ON s.emp_no = de.emp_no (s.from_date, s.to_date) OVERLAPS (de.from_date, de.to_date)
