reference/tests/snapshots/snapshot__run_reference_prql@syntax-5.prql.snap
---
source: reference/tests/snapshot.rs
expression: sql
input_file: reference/tests/prql/queries/syntax-5.prql
---
SELECT
  title,
  country,
  AVG(salary),
  COUNT(*) AS ct
FROM
  employees
GROUP BY
  title,
  country
